[package]
name = "evil-http"
version = "0.1.0"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "Be evil to http getters."
repository  = "https://code.moparisthebest.com/moparisthebest/evil-http"
keywords    = ["curl", "http", "evil"]

license = "AGPL-3.0+"
readme = "README.md"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
]
